fixed flicker

--- a/starships/style.css
+++ b/starships/style.css
@@ -113,3 +113,10 @@ footer h5 {
   font-weight: 300;
   text-decoration: none;
 }
+
+footer a:hover {
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  text-decoration: none;
+}
